--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "loaders.css": "^0.1.2",
     "programming-languages-logos": "^0.0.3",
     "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "sass": "^1.77.4",
     "web-vitals": "^2.1.4"
   },
