--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-scroll-to-top": "^3.0.0",
     "sass": "^1.77.4",
     "web-vitals": "^2.1.4"
   },
