--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
     "sass": "^1.77.4",
+    "scroll-to-top": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
